--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>14-1 Scoreboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
+    <script src="jquery-2.1.4.min.js"></script>
+    <script src="jquery.mobile-1.4.5.min.js"></script>
     <script src="jquery.fullscreen-min.js"></script>
     <script src="localDB.min.js"></script>
     <style>
