--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@ $(document).on("pageshow","#Scoreboard",function(){ // Wenn Page #Scoreboard gel
             href="#" data-rel="back">Terug</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b"
 
-            href="file:scoreboard8910.html"
+            href="scoreboard8910.html"
 
             rel="external" data-transition="flow">Naar 8-9-10 Ball Scoreboard</a>
           &nbsp;&nbsp;&nbsp;&nbsp;</div>
