--- a/scoreboard8910.html
+++ b/scoreboard8910.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Billard-live.org Scoreboard</title>
+    <title>ScoreKeeper</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
     <script src="jquery-2.1.4.min.js"></script>
