--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,8 @@ $(document).on("pageshow","#Scoreboard",function(){ // Wenn Page #Scoreboard gel
 			</style>
           <!-- linker Block -->
           <div id="lBlock" class="ui-block-a" style="background-color:;" align="center"><!-- linker Block -->
+			    <!-- Textbox for entering name -->
+  <input type="text" id="playerNameInput" placeholder="Enter Name" style="font-size: 16px; padding: 0.3em; margin-bottom: 0.5em; width: 80%; text-align: center;">
             <p id="spielerNameL" style="font-size: 36px;font-weight: bold;margin-top: 0em;">
             </p>
             <p id="linkerZaehler" class="Zaehler" style="font-size: 160px;font-weight: bold;margin-top: -0.25em;">0</p>
@@ -1076,6 +1078,8 @@ $(document).on("pageshow","#Scoreboard",function(){ // Wenn Page #Scoreboard gel
           <!-- Ende mittel Block -->
           <!-- rechter Block -->
           <div id="rBlock" class="ui-block-c" style="background-color:;" align="center">
+			    <!-- Textbox for entering name -->
+  <input type="text" id="playerNameInput" placeholder="Enter Name" style="font-size: 16px; padding: 0.3em; margin-bottom: 0.5em; width: 80%; text-align: center;">
             <p id="spielerNameR" style="font-size: 36px;font-weight: bold;margin-top: 0em;">
             </p>
             <p id="rechterZaehler" class="Zaehler" style="font-size: 160px;font-weight: bold;margin-top: -0.25em;">0</p>
