--- a/scoreboard8910.html
+++ b/scoreboard8910.html
@@ -343,7 +343,7 @@
             href="#" data-rel="back">Terug</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b"
 
-            href="14-1scoreboard.html"
+            href="index.html"
 
             rel="external" data-transition="flow">Naar 14-1 Scoreboard</a>
           &nbsp;&nbsp;&nbsp;&nbsp;</div>
