--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <title>14-1 Scoreboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
+	<link rel="manifest" href="manifest.json">
     <script src="jquery-2.1.4.min.js"></script>
     <script src="jquery.mobile-1.4.5.min.js"></script>
     <script src="jquery.fullscreen-min.js"></script>
     <script src="localDB.min.js"></script>
-    <script>
+    
+	<script>
+		
+
+
 //Initialisierung
 	var rest = 15; 							var punkte = 0; 						var punkte1 = 0; 
 	var punkte2 = 0; 						var spielerAktiv = 0; 					var logText = ""; 
@@ -1307,6 +1312,16 @@ $(document).on("pageshow","#Scoreboard",function(){ // Wenn Page #Scoreboard gel
           data-inline="true" data-mini="true" data-icon="back">Terug</a> </div>
       <!-- /footer ende--> </div>
     <!-- /page history ende -->
+
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(reg => console.log('Service worker geregistreerd'))
+      .catch(error => console.log('Service worker fout:', error));
+  });
+}
+</script>
+
   </body>
 </html>
-
