--- a/index.html
+++ b/index.html
@@ -999,6 +999,8 @@ $(document).on("pageshow","#Scoreboard",function(){ // Wenn Page #Scoreboard gel
 <link rel="apple-touch-icon" sizes="512x512" href="img/icon-512.png" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	  <meta name="apple-mobile-web-app-title" content="14-1" />
+
   
   </head>
   <body onload="setInterval(DateTime, 1000);">
