--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
 
   	<link rel="apple-touch-icon" sizes="512x512" href="img/icon-512.png" />
-	
+	<meta name="apple-mobile-web-app-title" content="Scorekeeper" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-	<meta name="apple-mobile-web-app-title" content="14-1" />
+
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>14-1 Scoreboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
